--- a/anova.ipynb
+++ b/anova.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:28fdf3ab2cfd72a0d5d74d1f82fc99d2695e242500d1daa87b966d19be591d88"
+  "signature": "sha256:8860436bc3b14bcc6db0d7111a17043f29b72e846c271948207e67a2306e3078"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%matplotlib inline\n"
+      "import statsmodels.api as sm"
      ],
      "language": "python",
      "metadata": {},
@@ -23,20 +23,97 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from IPython.display import Image"
+      "moore=sm.datasets.get_rdataset(\"Moore\",\"car\")\n",
+      "moore.data.head()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>partner.status</th>\n",
+        "      <th>conformity</th>\n",
+        "      <th>fcategory</th>\n",
+        "      <th>fscore</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> low</td>\n",
+        "      <td>  8</td>\n",
+        "      <td>  low</td>\n",
+        "      <td> 37</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> low</td>\n",
+        "      <td>  4</td>\n",
+        "      <td> high</td>\n",
+        "      <td> 57</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> low</td>\n",
+        "      <td>  8</td>\n",
+        "      <td> high</td>\n",
+        "      <td> 65</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> low</td>\n",
+        "      <td>  7</td>\n",
+        "      <td>  low</td>\n",
+        "      <td> 20</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> low</td>\n",
+        "      <td> 10</td>\n",
+        "      <td>  low</td>\n",
+        "      <td> 36</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>5 rows \u00d7 4 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "  partner.status  conformity fcategory  fscore\n",
+        "0            low           8       low      37\n",
+        "1            low           4      high      57\n",
+        "2            low           8      high      65\n",
+        "3            low           7       low      20\n",
+        "4            low          10       low      36\n",
+        "\n",
+        "[5 rows x 4 columns]"
+       ]
+      }
+     ],
      "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\uceec\ub7fc\uc5d0 \uc810(.)\uc774 \uc788\uc73c\uba74 \ucc98\ub9ac\uac00 \uc548\ub41c\ub2e4. \ub530\ub77c\uc11c \uceec\ub7fc\uba85\uc744 \ubc14\uafb8\uc5b4\ubcf4\uc790\n",
+      "$$\\alpha$$"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a=3\n",
-      "b=2*a\n",
-      "type(b)"
+      "moore.data.columns=['c1','v1','c2','v2']\n",
+      "moore.data.columns"
      ],
      "language": "python",
      "metadata": {},
@@ -44,78 +121,95 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 4,
        "text": [
-        "int"
+        "Index([u'c1', u'v1', u'c2', u'v2'], dtype='object')"
        ]
       }
      ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import numpy as np\n",
-      "x=np.random.randn(10)\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "x"
+      "from statsmodels.formula.api import ols\n",
+      "formula='v2~C(c1)*C(c2)'\n",
+      "from statsmodels.stats.anova import anova_lm\n",
+      "model=ols(formula,data=moore.data).fit()\n",
+      "from statsmodels.stats.anova import anova_lm\n",
+      "anova_lm(model)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>df</th>\n",
+        "      <th>sum_sq</th>\n",
+        "      <th>mean_sq</th>\n",
+        "      <th>F</th>\n",
+        "      <th>PR(&gt;F)</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>C(c1)</th>\n",
+        "      <td>  1</td>\n",
+        "      <td>    7.932587</td>\n",
+        "      <td>    7.932587</td>\n",
+        "      <td>   0.231555</td>\n",
+        "      <td> 6.330623e-01</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>C(c2)</th>\n",
+        "      <td>  2</td>\n",
+        "      <td> 7561.365635</td>\n",
+        "      <td> 3780.682818</td>\n",
+        "      <td> 110.359336</td>\n",
+        "      <td> 8.768957e-17</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>C(c1):C(c2)</th>\n",
+        "      <td>  2</td>\n",
+        "      <td>   29.086807</td>\n",
+        "      <td>   14.543403</td>\n",
+        "      <td>   0.424527</td>\n",
+        "      <td> 6.570656e-01</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Residual</th>\n",
+        "      <td> 39</td>\n",
+        "      <td> 1336.059416</td>\n",
+        "      <td>   34.257934</td>\n",
+        "      <td>        NaN</td>\n",
+        "      <td>          NaN</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>4 rows \u00d7 5 columns</p>\n",
+        "</div>"
+       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 7,
        "text": [
-        "array([-0.38685515, -0.24223268,  0.34694226, -1.49076706,  1.85377866,\n",
-        "        0.48940695,  0.44857959, -1.37717957,  0.73972356,  0.37654711])"
+        "             df       sum_sq      mean_sq           F        PR(>F)\n",
+        "C(c1)         1     7.932587     7.932587    0.231555  6.330623e-01\n",
+        "C(c2)         2  7561.365635  3780.682818  110.359336  8.768957e-17\n",
+        "C(c1):C(c2)   2    29.086807    14.543403    0.424527  6.570656e-01\n",
+        "Residual     39  1336.059416    34.257934         NaN           NaN\n",
+        "\n",
+        "[4 rows x 5 columns]"
        ]
       }
      ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "plt.hist(x)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "(array([ 2.,  0.,  0.,  2.,  0.,  4.,  1.,  0.,  0.,  1.]),\n",
-        " array([-1.49076706, -1.15631248, -0.82185791, -0.48740334, -0.15294877,\n",
-        "         0.1815058 ,  0.51596037,  0.85041494,  1.18486951,  1.51932408,\n",
-        "         1.85377866]),\n",
-        " <a list of 10 Patch objects>)"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEaRJREFUeJzt3X+I5PV9x/HnyzvFpLY5rOUSvRNbVBr/MZcWIyatE2iK\nHuXSgCUKwWBTI1KJ5I82xFq8g0LaUmgw/shBTTAJREpC5WzuMCZ1JFJ6beLdRXPaeJCAmngWjGK8\nBH+9+8d+veyNuzszO7M3ux+fDxju+53ve7/z5jOzr/3sZ+Z7m6pCktSWE2bdgCRp+gx3SWqQ4S5J\nDTLcJalBhrskNchwl6QGjRTuSdYl2ZfknkWO35zk8SQHkmyZbouSpHGNOnO/HjgIvOFD8Um2AmdX\n1TnAx4Hbp9eeJGk5hoZ7kk3AVuBfgCxQsg24E6Cq9gIbkmycZpOSpPGMMnP/Z+CvgNcWOX4G8MS8\n/SeBTRP2JUmawJLhnuRPgGeqah8Lz9qPlg7s+38aSNIMrR9y/CJgW7eufjLwG0m+VFVXzqt5Ctg8\nb39Td98xkhj4krQMVbXU5HpBS87cq+qGqtpcVb8NXA78x0CwA+wCrgRIciHwXFUdXuR8a/Z20003\nzbyHN2v/0+q9exXO4HYTr/8yO+uxfLO9dlrof7mGzdwHFUCSa7oX6s6q2p1ka5JDwIvAVcvuRpI0\nFSOHe1U9ADzQbe8cOHbdlPuSJE3AK1RH1Ov1Zt3CRNZy/2u59zm9WTcwkbU+/mu9/+XKJGs6Yz1Q\nUsfrsaSFJGG2H+TKRGuoenNKQk37DVVJ0tpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S\n1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGjQ03JOcnGRvkv1JDib5\nzAI1vSTPJ9nX3W5cmXYlSaMY+geyq+qXSd5fVUeSrAceTPK+qnpwoPSBqtq2Mm1KksYx0rJMVR3p\nNk8C1gHPLlA29t/4kyStjJHCPckJSfYDh4H7q+rgQEkBFyU5kGR3kvOm3agkaXSjztxfq6p3AZuA\nP0zSGyh5CNhcVecDnwPunmqXkqSxDF1zn6+qnk/yDeD3gf68+1+Yt70nyW1JTq2qY5Zvtm/ffnS7\n1+vR6/WW17UkNarf79Pv9yc+T6pq6YLkNOCVqnouyVuAe4EdVfXteTUbgWeqqpJcAPxrVZ01cJ4a\n9ljSSkrC3ArizDrA7wGNKwlVNfZ7mqPM3N8B3JnkBOaWcb5cVd9Ocg1AVe0ELgOuTfIKcAS4fNxG\nJEnTM3TmPrUHcuauGXPmrrVouTN3r1CVpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrsk\nNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGrRkuCc5\nOcneJPuTHEzymUXqbk7yeJIDSbasTKuSpFGtX+pgVf0yyfur6kiS9cCDSd5XVQ++XpNkK3B2VZ2T\n5D3A7cCFK9u2JGkpQ5dlqupIt3kSsA54dqBkG3BnV7sX2JBk4zSblCSNZ2i4JzkhyX7gMHB/VR0c\nKDkDeGLe/pPApum1KEka15LLMgBV9RrwriRvA+5N0quq/kBZBr9soXNt37796Hav16PX643TqyQ1\nr9/v0+/3Jz5PqhbM4YWLk78FflFV/zTvvs8D/aq6q9t/DLi4qg4PfG2N81jStCVhkXnH8eoAvwc0\nriRU1eAEeqhhn5Y5LcmGbvstwAeAfQNlu4Aru5oLgecGg12SdHwNW5Z5B3BnkhOY+0Hw5ar6dpJr\nAKpqZ1XtTrI1ySHgReCqlW1ZkjTMWMsyEz2QyzKaMZdltBatyLKMJGltMtwlqUGGuyQ1yHCXpAYZ\n7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEu\nSQ0y3CWpQYa7JDVoaLgn2Zzk/iQ/SPJIkk8sUNNL8nySfd3txpVpV5I0ivUj1LwMfLKq9ic5Bfhe\nkvuq6tGBugeqatv0W5QkjWvozL2qnq6q/d32z4FHgdMXKB37r3NLklbGWGvuSc4CtgB7Bw4VcFGS\nA0l2JzlvOu1JkpZjlGUZALolma8B13cz+PkeAjZX1ZEklwJ3A+cOnmP79u1Ht3u9Hr1ebxktS1K7\n+v0+/X5/4vOkqoYXJScC/w7sqarPjlD/I+D3qurZeffVKI8lrZQkzP2SObMO8HtA40pCVY297D3K\np2UC3AEcXCzYk2zs6khyAXM/NJ5dqFaStPJGWZZ5L/AR4PtJ9nX33QCcCVBVO4HLgGuTvAIcAS5f\ngV4lSSMaaVlmKg/ksoxmzGUZrUUrtiwjSVp7DHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNd\nkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0aGu5J\nNie5P8kPkjyS5BOL1N2c5PEkB5JsmX6rkqRRrR+h5mXgk1W1P8kpwPeS3FdVj75ekGQrcHZVnZPk\nPcDtwIUr07IkaZihM/eqerqq9nfbPwceBU4fKNsG3NnV7AU2JNk45V4lSSMaZeZ+VJKzgC3A3oFD\nZwBPzNt/EtgEHJ5fdM8994zd4DSdf/75nHnmmTPtQZKOh5HDvVuS+RpwfTeDf0PJwH4NFnzoQ3/B\nunVvm3vg9b/J+vWnjdHqZF56aT+33LKdj33sY8ftMVebZPApOv6q3vCykDRPv9+n3+9PfJ6Rwj3J\nicDXga9U1d0LlDwFbJ63v6m77xivvvp3vPrq1QC89NLYvU7krW9984b6sWYZrrP/4SKtdr1ej16v\nd3R/x44dyzrPKJ+WCXAHcLCqPrtI2S7gyq7+QuC5qjq8SK0kaYWNMnN/L/AR4PtJ9nX33QCcCVBV\nO6tqd5KtSQ4BLwJXrUi3kqSRDA33qnqQ0T5Vc91UOpIkTcwrVCWpQYa7JDXIcJekBhnuktQgw12S\nGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalB\nhrskNchwl6QGDQ33JF9IcjjJw4sc7yV5Psm+7nbj9NuUJI1j6B/IBr4IfA740hI1D1TVtum0JEma\n1NCZe1V9B/jZkLJMpx1J0jRMY829gIuSHEiyO8l5UzinJGkCoyzLDPMQsLmqjiS5FLgbOHfh0l3A\nU912r7tJkl7X7/fp9/sTn2ficK+qF+Zt70lyW5JTq+rZN1ZvA66e9CElqVm9Xo9er3d0f8eOHcs6\nz8TLMkk2Jkm3fQGQhYNdknS8DJ25J/kqcDFwWpIngJuAEwGqaidwGXBtkleAI8DlK9euJGkUQ8O9\nqq4YcvxW4NapdSRJmphXqEpSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMM\nd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNGhruSb6Q5HCSh5eo\nuTnJ40kOJNky3RYlSeMaZeb+ReCSxQ4m2QqcXVXnAB8Hbp9Sb5KkZRoa7lX1HeBnS5RsA+7savcC\nG5JsnE57kqTlmMaa+xnAE/P2nwQ2TeG8kqRlWj+l82RgvxYu2wU81W33upv05pEMfqscX1WLfGu+\nCcx67GG08e/3+/T7/Ykfaxrh/hSwed7+Jn6V4AO2AVdP4SGltWqW4Tr7cJu91T/+vV6PXq93dH/H\njh3LerRpLMvsAq4ESHIh8FxVHZ7CeSVJyzR05p7kq8DFwGlJngBuAk4EqKqdVbU7ydYkh4AXgatW\nsmFJ0nBDw72qrhih5rrptCNJmgavUJWkBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1\nyHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1KCRwj3JJUkeS/J4\nkk8tcLyX5Pkk+7rbjdNvVZI0qlH+QPY64Bbgj4CngP9JsquqHh0ofaCqtq1Aj5KkMY0yc78AOFRV\nP66ql4G7gA8uUJepdiZJWrZRwv0M4Il5+092981XwEVJDiTZneS8aTUoSRrf0GUZ5oJ7mIeAzVV1\nJMmlwN3AuRN1JklatlHC/Slg87z9zczN3o+qqhfmbe9JcluSU6vq2WNPtas7HUCvu0mSXtfv9+n3\n+xOfZ5Rw/y5wTpKzgJ8AHwaumF+QZCPwTFVVkguAvDHYAbYBV0/WsSQ1rNfr0ev1ju7v2LFjWecZ\nGu5V9UqS64B7gXXAHVX1aJJruuM7gcuAa5O8AhwBLl9WN5KkqRhl5k5V7QH2DNy3c972rcCt021N\nkrRcXqEqSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCX\npAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNWhouCe5JMljSR5P8qlFam7ujh9IsmX6\nbUqSxrFkuCdZB9wCXAKcB1yR5J0DNVuBs6vqHODjwO0r1OtM9fv9WbcwkbXc/1rufU5/1g1MZK2P\n/1rvf7mGzdwvAA5V1Y+r6mXgLuCDAzXbgDsBqmovsCHJxql3OmNr/QWylvtfy73P6c+6gYms9fFf\n6/0v17BwPwN4Yt7+k919w2o2Td6aJGm51g85XiOeJ6N83cknf46TTto14imn66WX9gMXzeSxJel4\nS9Xi+Z3kQmB7VV3S7X8aeK2q/mFezeeBflXd1e0/BlxcVYcHzjXqDwpJ0jxVNTiBHmrYzP27wDlJ\nzgJ+AnwYuGKgZhdwHXBX98PgucFgX25zkqTlWTLcq+qVJNcB9wLrgDuq6tEk13THd1bV7iRbkxwC\nXgSuWvGuJUlLWnJZRpK0Nq3YFapJ/izJD5K8muTdS9T9OMn3k+xL8t8r1c+4xuh/6EVex1uSU5Pc\nl+SHSb6ZZMMidatq7Nf6BXPD+k/SS/J8N977ktw4iz4XkuQLSQ4neXiJmtU89kv2v5rHHiDJ5iT3\nd5nzSJJPLFI3+nNQVStyA34XOBe4H3j3EnU/Ak5dqT5Wsn/mlqoOAWcBJwL7gXeugt7/EfjrbvtT\nwN+v9rEfZSyBrcDubvs9wH/Nuu8x++8Bu2bd6yL9/wGwBXh4keOrduxH7H/Vjn3X39uBd3XbpwD/\nO+nrf8Vm7lX1WFX9cMTyVfdm64j9j3KR1ywcvbCs+/dPl6hdLWO/1i+YG/W1sFrG+xhV9R3gZ0uU\nrOaxH6V/WKVjD1BVT1fV/m7758CjwOkDZWM9B6vhPw4r4FtJvpvk6lk3M6ZRLvKahY31q08sHQYW\newGsprFf6xfMjdJ/ARd1v1LvTnLecetucqt57EexZsa++3TiFmDvwKGxnoNhH4Uc1sR9zP06MeiG\nqrpnxNO8t6p+muS3gPuSPNb9FF5xU+h/Zu9GL9H738zfqapa4hqDmY39AqZ6wdwMjNLHQ8DmqjqS\n5FLgbuaW/taK1Tr2o1gTY5/kFOBrwPXdDP4NJQP7iz4HE4V7VX1gkq/vzvHT7t//S/JvzP16e1wC\nZgr9PwVsnre/mbmfpituqd67N5beXlVPJ3kH8Mwi55jZ2C9glLEcrNnU3bcaDO2/ql6Yt70nyW1J\nTq2qZ49Tj5NYzWM/1FoY+yQnAl8HvlJVdy9QMtZzcLyWZRZc60ry1iS/3m3/GvDHwKLv1s/QYmt1\nRy/ySnIScxd5zeb/VzjWLuCj3fZHmZulHGMVjv0oY7kLuBKOXj294AVzMzK0/yQbk6TbvoC5jyKv\nmnAZYjWP/VCrfey73u4ADlbVZxcpG+85WMF3fz/E3PrQL4CngT3d/acD3+i2f4e5TxXsBx4BPj3r\nd63H6b/bv5S5d7YPrZb+gVOBbwE/BL4JbFgLY7/QWALXANfMq7mlO36AJT6FtRr7B/6yG+v9wH8C\nF86653m9f5W5q9Bf6l73f77Gxn7J/lfz2Hf9vQ94retvX3e7dJLnwIuYJKlBq+HTMpKkKTPcJalB\nhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lq0P8DvP3wQZgy4hEAAAAASUVORK5CYII=\n",
-       "text": [
-        "<matplotlib.figure.Figure at 0x10b6bb4d0>"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
