--- a/regression.ipynb
+++ b/regression.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:32fdcdf61b10a6643c41b295c316b22c7ec6ae33c5b3b72c01e2631a8fd21b70"
+  "signature": "sha256:84fdec939e4ce294cccadf4f364e45f2c0082d0b19db224fd3563b4f84b06b4e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -28,15 +28,14 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "# data\n",
-      "* Description\n",
-      "This data frame contains the responses of 237 Statistics I students at the University of Adelaide to\n",
+      "* This data frame contains the responses of 237 Statistics I students at the University of Adelaide to\n",
       "a number of questions.\n",
       "* Sex The sex of the student. (Factor with levels \"Male\" and \"Female\".)\n",
       "* Wr.Hnd span (distance from tip of thumb to tip of little finger of spread hand) of writing hand, in\n",
@@ -52,7 +51,7 @@
       "* Height height of the student in centimetres.\n",
       "* M.I whether the student expressed height in imperial (feet/inches) or metric (centimetres/metres)\n",
       "units. (Factor, levels \"Metric\", \"Imperial\".)\n",
-      "*Age age of the student in years"
+      "* Age age of the student in years"
      ]
     },
     {
@@ -71,18 +70,18 @@
         "  <thead>\n",
         "    <tr style=\"text-align: right;\">\n",
         "      <th></th>\n",
-        "      <th>Sex</th>\n",
-        "      <th>Wr.Hnd</th>\n",
-        "      <th>NW.Hnd</th>\n",
-        "      <th>W.Hnd</th>\n",
-        "      <th>Fold</th>\n",
-        "      <th>Pulse</th>\n",
-        "      <th>Clap</th>\n",
-        "      <th>Exer</th>\n",
-        "      <th>Smoke</th>\n",
-        "      <th>Height</th>\n",
-        "      <th>M.I</th>\n",
-        "      <th>Age</th>\n",
+        "      <th>sex</th>\n",
+        "      <th>wr</th>\n",
+        "      <th>nw</th>\n",
+        "      <th>w</th>\n",
+        "      <th>fold</th>\n",
+        "      <th>pulse</th>\n",
+        "      <th>clap</th>\n",
+        "      <th>exer</th>\n",
+        "      <th>smoke</th>\n",
+        "      <th>height</th>\n",
+        "      <th>mi</th>\n",
+        "      <th>age</th>\n",
         "    </tr>\n",
         "  </thead>\n",
         "  <tbody>\n",
@@ -163,29 +162,32 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>5 rows \u00d7 12 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 22,
        "text": [
-        "      Sex  Wr.Hnd  NW.Hnd  W.Hnd     Fold  Pulse     Clap  Exer  Smoke  \\\n",
-        "0  Female    18.5    18.0  Right   R on L     92     Left  Some  Never   \n",
-        "1    Male    19.5    20.5   Left   R on L    104     Left  None  Regul   \n",
-        "2    Male    18.0    13.3  Right   L on R     87  Neither  None  Occas   \n",
-        "3    Male    18.8    18.9  Right   R on L    NaN  Neither  None  Never   \n",
-        "4    Male    20.0    20.0  Right  Neither     35    Right  Some  Never   \n",
+        "      sex    wr    nw      w     fold  pulse     clap  exer  smoke  height  \\\n",
+        "0  Female  18.5  18.0  Right   R on L     92     Left  Some  Never   173.0   \n",
+        "1    Male  19.5  20.5   Left   R on L    104     Left  None  Regul   177.8   \n",
+        "2    Male  18.0  13.3  Right   L on R     87  Neither  None  Occas     NaN   \n",
+        "3    Male  18.8  18.9  Right   R on L    NaN  Neither  None  Never   160.0   \n",
+        "4    Male  20.0  20.0  Right  Neither     35    Right  Some  Never   165.0   \n",
         "\n",
-        "   Height       M.I     Age  \n",
-        "0   173.0    Metric  18.250  \n",
-        "1   177.8  Imperial  17.583  \n",
-        "2     NaN       NaN  16.917  \n",
-        "3   160.0    Metric  20.333  \n",
-        "4   165.0    Metric  23.667  "
+        "         mi     age  \n",
+        "0    Metric  18.250  \n",
+        "1  Imperial  17.583  \n",
+        "2       NaN  16.917  \n",
+        "3    Metric  20.333  \n",
+        "4    Metric  23.667  \n",
+        "\n",
+        "[5 rows x 12 columns]"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -199,13 +201,81 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 4,
        "text": [
         "pandas.core.frame.DataFrame"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mass.data.groupby('Sex').mean()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Wr.Hnd</th>\n",
+        "      <th>NW.Hnd</th>\n",
+        "      <th>Pulse</th>\n",
+        "      <th>Height</th>\n",
+        "      <th>Age</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Sex</th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Female</th>\n",
+        "      <td> 17.595763</td>\n",
+        "      <td> 17.45678</td>\n",
+        "      <td> 75.126316</td>\n",
+        "      <td> 165.686667</td>\n",
+        "      <td> 20.407534</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Male</th>\n",
+        "      <td> 19.741880</td>\n",
+        "      <td> 19.71453</td>\n",
+        "      <td> 73.197917</td>\n",
+        "      <td> 178.826038</td>\n",
+        "      <td> 20.331958</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>2 rows \u00d7 5 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "           Wr.Hnd    NW.Hnd      Pulse      Height        Age\n",
+        "Sex                                                          \n",
+        "Female  17.595763  17.45678  75.126316  165.686667  20.407534\n",
+        "Male    19.741880  19.71453  73.197917  178.826038  20.331958\n",
+        "\n",
+        "[2 rows x 5 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -223,6 +293,7 @@
         "  <thead>\n",
         "    <tr style=\"text-align: right;\">\n",
         "      <th></th>\n",
+        "      <th>Sex</th>\n",
         "      <th>Wr.Hnd</th>\n",
         "      <th>NW.Hnd</th>\n",
         "      <th>W.Hnd</th>\n",
@@ -248,11 +319,13 @@
         "      <th></th>\n",
         "      <th></th>\n",
         "      <th></th>\n",
+        "      <th></th>\n",
         "    </tr>\n",
         "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>Female</th>\n",
+        "      <td> 118</td>\n",
         "      <td> 118</td>\n",
         "      <td> 118</td>\n",
         "      <td> 117</td>\n",
@@ -267,6 +340,7 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>Male</th>\n",
+        "      <td> 118</td>\n",
         "      <td> 117</td>\n",
         "      <td> 117</td>\n",
         "      <td> 118</td>\n",
@@ -281,25 +355,28 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>2 rows \u00d7 12 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 6,
        "text": [
-        "        Wr.Hnd  NW.Hnd  W.Hnd  Fold  Pulse  Clap  Exer  Smoke  Height  M.I  \\\n",
+        "        Sex  Wr.Hnd  NW.Hnd  W.Hnd  Fold  Pulse  Clap  Exer  Smoke  Height  \\\n",
         "Sex                                                                          \n",
-        "Female     118     118    117   118     95   118   118    118     102  102   \n",
-        "Male       117     117    118   118     96   117   118    117     106  106   \n",
+        "Female  118     118     118    117   118     95   118   118    118     102   \n",
+        "Male    118     117     117    118   118     96   117   118    117     106   \n",
         "\n",
-        "        Age  \n",
-        "Sex          \n",
-        "Female  118  \n",
-        "Male    118  "
+        "        M.I  Age  \n",
+        "Sex               \n",
+        "Female  102  118  \n",
+        "Male    106  118  \n",
+        "\n",
+        "[2 rows x 12 columns]"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -311,7 +388,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -325,36 +402,36 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 18,
+       "prompt_number": 24,
        "text": [
         "Index([u'sex', u'wr', u'nw', u'w', u'fold', u'pulse', u'clap', u'exer', u'smoke', u'height', u'mi', u'age'], dtype='object')"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import seaborn as sns\n",
-      "sns.corrplot(mass.data)"
+      "import matplotlib.pyplot as plt\n",
+      "sns.corrplot(mass.data)\n",
+      "plt.show()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "ImportError",
-       "evalue": "No module named seaborn",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-23-ed9806ce3570>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mImportError\u001b[0m: No module named seaborn"
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/System/Library/Frameworks/Python.framework/Versions/2.7/Extras/lib/python/numpy/core/_methods.py:55: RuntimeWarning: Mean of empty slice.\n",
+        "  warnings.warn(\"Mean of empty slice.\", RuntimeWarning)\n"
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -379,8 +456,8 @@
         "Model Family:                          Binomial   Df Model:                            6\n",
         "Link Function:                            logit   Scale:                             1.0\n",
         "Method:                                    IRLS   Log-Likelihood:                -52.236\n",
-        "Date:                          Wed, 17 Dec 2014   Deviance:                       104.47\n",
-        "Time:                                  17:16:19   Pearson chi2:                     646.\n",
+        "Date:                          Thu, 18 Dec 2014   Deviance:                       104.47\n",
+        "Time:                                  05:54:20   Pearson chi2:                     646.\n",
         "No. Iterations:                               7                                         \n",
         "==============================================================================\n",
         "                 coef    std err          t      P>|t|      [95.0% Conf. Int.]\n",
@@ -396,15 +473,15 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "formula='sex ~ nw+height'\n",
-      "model=smf.glm(formula,data=mass.data,family=sm.families.Binomial()).fit()\n",
-      "print (model.summary())"
+      "formula2='sex ~ nw+height'\n",
+      "model2=smf.glm(formula2,data=mass.data,family=sm.families.Binomial()).fit()\n",
+      "print (model2.summary())"
      ],
      "language": "python",
      "metadata": {},
@@ -420,8 +497,8 @@
         "Model Family:                          Binomial   Df Model:                            2\n",
         "Link Function:                            logit   Scale:                             1.0\n",
         "Method:                                    IRLS   Log-Likelihood:                -67.329\n",
-        "Date:                          Wed, 17 Dec 2014   Deviance:                       134.66\n",
-        "Time:                                  17:17:25   Pearson chi2:                     468.\n",
+        "Date:                          Thu, 18 Dec 2014   Deviance:                       134.66\n",
+        "Time:                                  06:11:04   Pearson chi2:                     468.\n",
         "No. Iterations:                               7                                         \n",
         "==============================================================================\n",
         "                 coef    std err          t      P>|t|      [95.0% Conf. Int.]\n",
@@ -433,15 +510,126 @@
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "formula3='height ~ 1+sex'\n",
+      "model3=smf.ols(formula3,data=mass.data).fit()\n",
+      "print model3.summary()"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "                            OLS Regression Results                            \n",
+        "==============================================================================\n",
+        "Dep. Variable:                 height   R-squared:                       0.445\n",
+        "Model:                            OLS   Adj. R-squared:                  0.442\n",
+        "Method:                 Least Squares   F-statistic:                     165.1\n",
+        "Date:                Thu, 18 Dec 2014   Prob (F-statistic):           3.86e-28\n",
+        "Time:                        05:55:00   Log-Likelihood:                -709.66\n",
+        "No. Observations:                 208   AIC:                             1423.\n",
+        "Df Residuals:                     206   BIC:                             1430.\n",
+        "Df Model:                           1                                         \n",
+        "===============================================================================\n",
+        "                  coef    std err          t      P>|t|      [95.0% Conf. Int.]\n",
+        "-------------------------------------------------------------------------------\n",
+        "Intercept     165.6867      0.730    226.978      0.000       164.248   167.126\n",
+        "sex[T.Male]    13.1394      1.023     12.850      0.000        11.123    15.155\n",
+        "==============================================================================\n",
+        "Omnibus:                        2.703   Durbin-Watson:                   1.695\n",
+        "Prob(Omnibus):                  0.259   Jarque-Bera (JB):                2.365\n",
+        "Skew:                          -0.250   Prob(JB):                        0.306\n",
+        "Kurtosis:                       3.153   Cond. No.                         2.64\n",
+        "==============================================================================\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "$$ y=\\beta_0 + \\beta_1 \\times x $$\n",
+      "\n",
+      "$$ \\hat{y} = \\hat{\\beta_0} + \\hat{\\beta_1} \\times x $$\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* regression \uacb0\uacfc\uc5d0\uc11c Intercept(165.686) + Male(13.139)\ub294 \ud3c9\uade0\uacfc \ub3d9\uc77c\n",
+      "* regression\uacfc anova\ub294 \uac19\uc740 \uacb0\uacfc\ub97c \ubcf4\uc5ec\uc90c."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "anova_model=smf.ols(formula3,data=mass.data).fit()\n",
+      "from statsmodels.stats.anova import anova_lm\n",
+      "anova_lm(anova_model)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>df</th>\n",
+        "      <th>sum_sq</th>\n",
+        "      <th>mean_sq</th>\n",
+        "      <th>F</th>\n",
+        "      <th>PR(&gt;F)</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>sex</th>\n",
+        "      <td>   1</td>\n",
+        "      <td>  8974.119690</td>\n",
+        "      <td> 8974.119690</td>\n",
+        "      <td> 165.114466</td>\n",
+        "      <td> 3.861758e-28</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Residual</th>\n",
+        "      <td> 206</td>\n",
+        "      <td> 11196.285203</td>\n",
+        "      <td>   54.350899</td>\n",
+        "      <td>        NaN</td>\n",
+        "      <td>          NaN</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>2 rows \u00d7 5 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "           df        sum_sq      mean_sq           F        PR(>F)\n",
+        "sex         1   8974.119690  8974.119690  165.114466  3.861758e-28\n",
+        "Residual  206  11196.285203    54.350899         NaN           NaN\n",
+        "\n",
+        "[2 rows x 5 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
