--- a/anova.ipynb
+++ b/anova.ipynb
@@ -80,7 +80,6 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
-        "<p>5 rows \u00d7 4 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
@@ -92,9 +91,7 @@
         "1            low           4      high      57\n",
         "2            low           8      high      65\n",
         "3            low           7       low      20\n",
-        "4            low          10       low      36\n",
-        "\n",
-        "[5 rows x 4 columns]"
+        "4            low          10       low      36"
        ]
       }
      ],
@@ -104,8 +101,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "# \ud070\uae00\uc528\n",
       "\uceec\ub7fc\uc5d0 \uc810(.)\uc774 \uc788\uc73c\uba74 \ucc98\ub9ac\uac00 \uc548\ub41c\ub2e4. \ub530\ub77c\uc11c \uceec\ub7fc\uba85\uc744 \ubc14\uafb8\uc5b4\ubcf4\uc790\n",
-      "$$\\alpha$$"
+      "$$\\alpha \\beta \\sum_{1-1}^{n} \\frac{1}{2}$$\n",
+      "\n",
+      "## \uc880 \uc791\uc740\n",
+      "* \uc124\uba85\n",
+      "* \uc608\uc81c\n",
+      "* "
      ]
     },
     {
